RESOLVED FIXED199678
Context menus are not presented for WKWebViews that don't have UIDelegates
https://bugs.webkit.org/show_bug.cgi?id=199678
Summary Context menus are not presented for WKWebViews that don't have UIDelegates
Tim Horton
Reported 2019-07-10 12:02:32 PDT
Context menus are not presented for WKWebViews that don't have UIDelegates
Attachments
Patch (6.80 KB, patch)
2019-07-10 12:03 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2019-07-10 12:03:34 PDT
Radar WebKit Bug Importer
Comment 2 2019-07-10 12:06:50 PDT
WebKit Commit Bot
Comment 3 2019-07-10 13:04:33 PDT
Comment on attachment 373855 [details] Patch Clearing flags on attachment: 373855 Committed r247321: <https://trac.webkit.org/changeset/247321>
WebKit Commit Bot
Comment 4 2019-07-10 13:04:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.