Context menus are not presented for WKWebViews that don't have UIDelegates https://bugs.webkit.org/show_bug.cgi?id=199678

Reviewed by Dean Jackson.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView continueContextMenuInteraction:]):
Remove this unnecessary early-return if we don't have a UIDelegate.
We have a default behavior that we totally want to happen.
Also, rename completion() to continueWithContextMenuConfiguration()
to reduce confusion between completion() and completionBlock() in
this method.


Canonical link: https://commits.webkit.org/213560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247321 268f45cc-cd09-0410-ab3c-d52691b4dbfc